--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Test-Regression
-version:            0.02
+version:            0.03
 abstract:           Test library that can be run in two modes: once to generate outputs and secondly to compare against them
 author:
     - Nicholas Bamber <nicholas@periapt.co.uk>
@@ -11,8 +11,10 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
+    Algorithm::Diff:    0
     Test::Differences:  0
     Test::More:         0
+    Text::Diff:         0
 no_index:
     directory:
         - t
