--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:               Test-Regression
-version:            0.03
-abstract:           Test library that can be run in two modes: once to generate outputs and secondly to compare against them
+version:            0.04
+abstract:           Test library that can be run in two modes; one to generate outputs and a second to compare against them
 author:
     - Nicholas Bamber <nicholas@periapt.co.uk>
 license:            perl
