--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,19 @@
 ---
-abstract: 'Test library that can be run in two modes; one to generate outputs and a second to compare against them'
+abstract: Test library that can be run in two modes; one to generate outputs and a
+  second to compare against them
 author:
-  - 'Nicholas Bamber <nicholas@periapt.co.uk>'
+- Nicholas Bamber <nicholas@periapt.co.uk>
 build_requires:
-  DirHandle: 0
-  File::Spec: 0
-  Test::MockObject: 0
+  DirHandle: '0'
+  File::Spec: '0'
+  Test::MockObject: '0'
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: '0.40'
+dynamic_config: 1
+generated_by: Module::Build version 0.4005, CPAN::Meta::Converter version 2.120921
 keywords:
-  - Test
-  - Regression
+- Test
+- Regression
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,14 +22,14 @@ name: Test-Regression
 provides:
   Test::Regression:
     file: lib/Test/Regression.pm
-    version: 0.06
+    version: '0.07'
 requires:
-  Algorithm::Diff: 0
-  FileHandle: 0
-  Test::Differences: 0
-  Test::More: 0
-  Text::Diff: 0
+  Algorithm::Diff: '0'
+  FileHandle: '0'
+  Test::Differences: '0'
+  Test::More: '0'
+  Text::Diff: '0'
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/periapt/test-regression/tree
-version: 0.06
+version: '0.07'
